# opportunities

./: .gitignore  README.md
agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
agent/docs/: COMPLIANCE.md  VERFAHRENSDOKUMENTATION.md
agent/postman/: tax-advisory-agent.postman_collection.json
agent/scripts/: check_anthropic.py  inspect_db.py  push-env-to-aca.ps1
agent/src/agent/: prompts.py  subagents.py  supervisor.py
agent/src/agent/tools/: code_sandbox.py  master_data_db.py
agent/src/api/: deps.py  main.py  security.py
agent/src/api/routes/: session.py
agent/src/api/schemas/: master_data.py  session.py
agent/src/config/: llm.py  profiles.py  settings.py
agent/src/parsers/: datev_parser.py  master_data.py  user_files.py
agent/src/reference/: skr03_map.json  skr04_map.json
agent/src/session/: state.py
agent/src/skills/buchfuehrungspflicht-141-ao/: SKILL.md
agent/src/skills/groessenklassen-267-hgb/: SKILL.md
agent/src/skills/investitionsabzug-7g-estg/: SKILL.md
agent/src/skills/judgment-optimization/: SKILL.md
agent/tests/: conftest.py  test_agent_behaviour.py  test_api_session.py  test_code_sandbox.py  test_datev_parser.py
agent/tests/fixtures/: tc01_kleinunternehmer_under.csv
backend/: .dockerignore  .env.example  Dockerfile  README.md  env  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  db.py  security.py
backend/app/schemas/: chat.py  client.py  thread.py
backend/app/services/: agent.py  masterdata_store.py  threads_store.py
backend/app/tests/: conftest.py  test_chat.py  test_clients.py  test_health.py  test_lifespan.py  test_threads.py
(+89 files in other folders)
